# thelab-instrumentation

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .rules  CHANGELOG.md  README.md  manage.py  pyproject.toml  tox.ini
thelabinstrumentation/: apps.py  conf.py
thelabinstrumentation/backends/: __init__.py  base.py  cloudwatch.py  factory.py  logging.py  structlog.py
thelabinstrumentation/rq/: apps.py  daemon.py
thelabinstrumentation/structlog/: apps.py  db.py  middleware.py  outgoing_http.py  receivers.py
thelabinstrumentation/tests/: __init__.py
thelabinstrumentation/tests/backends/: __init__.py  test_base.py  test_cloudwatch.py  test_factory.py  test_logging.py  test_structlog.py
thelabinstrumentation/tests/rq/: test_apps.py  test_daemon.py
thelabinstrumentation/tests/settings/: sqlite.py
thelabinstrumentation/tests/structlog/: test_conf.py  test_db.py  test_middleware.py  test_outgoing_http.py  test_receivers.py
